# gedcom-tools

./: .gitignore  README.md  add_unaccented_names.py  chop_tree.py  clean_notexml.py  conftest.py  convert_events_to_facts.py  convert_nonstandard_events.py  convert_physical_attrs.py  convert_wlnk.py  count_trees.py  export_minimal.py  extract_occupations.py  gedcom_delete.py  gedcom_io.py  gedcom_linter.py  knip.json  normalize_ancestry.py  package-lock.json  package.json  purge_broken_obje.py  purge_duplicate_events.py  pyproject.toml  serve_viz.py  strip_ancestry_artifacts.py  vitest.config.js  viz_ancestors.css  viz_ancestors.html  viz_ancestors.py
.claude/: COMMON_MISTAKES.md
gedcom_merge/: __init__.py  analysis.py  cli.py  match_families.py  match_individuals.py  match_sources.py  merge.py  model.py  normalize.py  parser.py  report.py  review.py  review_html.py  session.py  validator.py  writer.py
js/: viz_api.js  viz_constants.js  viz_design.js  viz_detail.js  viz_init.js  viz_layout.js  viz_modals.js  viz_panel.js  viz_primary_spouse.js  viz_relative_events.js  viz_render.js  viz_search.js  viz_state.js
mockups/: relative-events-options.html
tests/: helpers.py  test_add_unaccented_names.py  test_addr_under_plac.py  test_age_nati_occu.py  test_ancestry_tags.py  test_chop_tree.py  test_clean_notexml.py  test_completeness.py  test_convert_events_to_facts.py  test_convert_nonstandard_events.py  test_convert_physical_attrs.py  test_convert_wlnk.py  test_count_trees.py  test_curly_quotes.py  test_data_quality.py  test_date_normalization.py  test_dates.py  (+39 more)
(+52 files in other folders)
